[package]
name = "overcode"
version = "0.1.0"
edition = "2021"

[lib]
name = "overcode_preload"
crate-type = ["cdylib"]
path = "src/preload.rs"

[dependencies]
sha2 = "0.10"
toml = "0.8"
ignore = "0.4"
regex = "1.10"
walkdir = "2.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
ctor = "0.2"
